Update solution structure and add new features
- Updated Visual Studio version to 17.13.35825.156.
- Added "Core" project reference and updated configurations.
- Removed HomeController and added new API controller for PoRecord.
- Introduced Entity Framework Core and Swagger package references.
- Created new Core class and project targeting net8.0.
- Implemented PoRecord class and updated database context.
- Added migration for PoRecord table with nullable UpdatedDate.
- Created Start form for hourly data extraction and UI enhancements.
- Added WebViewFunctions class for WebView2 interactions.
- Updated resource files for localization support.

--- a/HOMS MES Extractor Web/appsettings.json
+++ b/HOMS MES Extractor Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HOMS_MES_Extractor_WebContext": "server=10.248.1.152;username=postgres;password=1234;database=HOMS_V2"
+  }
 }
